--- a/app/res/layout/fragment_location.xml
+++ b/app/res/layout/fragment_location.xml
@@ -52,7 +52,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/status_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/text_lon"
