--- a/app/res/layout/fragment_welcome.xml
+++ b/app/res/layout/fragment_welcome.xml
@@ -8,9 +8,60 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.punventure.punadventure.WelcomeActivity$PlaceholderFragment" >
 
-    <TextView
+    <Button
+        android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="33dp"
+        android:text="Settings" />
+
+    <Button
+        android:id="@+id/enter_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/settings_button"
+        android:layout_centerHorizontal="true"
+        android:text="Enter" />
+
+    <EditText
+        android:id="@+id/name_field"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/enter_button"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Name" >
+
+        <requestFocus />
+    </EditText>
+    <TextView
+        android:id="@+id/salutations_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/enter_button"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <ImageView
+        android:id="@+id/main_image"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="44dp"
+        android:src="@drawable/splash" />
+
+    <TextView
+        android:id="@+id/username_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/name_field"
+        android:layout_centerHorizontal="true"
+        android:text="Enter a username:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
