--- a/app/res/layout/fragment_location.xml
+++ b/app/res/layout/fragment_location.xml
@@ -61,4 +61,13 @@
         android:layout_alignTop="@+id/text_lon"
         android:src="@drawable/status_good" />
 
+    <ImageView
+        android:id="@+id/add_new_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/status_image"
+        android:layout_alignTop="@+id/status_label"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/add_new" />
+
 </RelativeLayout>
