--- a/app/res/layout/fragment_welcome.xml
+++ b/app/res/layout/fragment_welcome.xml
@@ -3,65 +3,82 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.punventure.punadventure.WelcomeActivity$PlaceholderFragment" >
 
-    <Button
-        android:id="@+id/settings_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
-        android:text="Settings" />
+    <ImageView
+        android:id="@+id/black_rect"
+        android:layout_width="fill_parent"
+        android:layout_height="350dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/black_rectangle" />
 
-    <Button
-        android:id="@+id/enter_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/settings_button"
-        android:layout_centerHorizontal="true"
-        android:text="Enter" />
+    <ImageView
+        android:id="@+id/blue_rect"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="75dp"
+        android:src="@drawable/blue_rectangle" />
 
-    <EditText
-        android:id="@+id/name_field"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/enter_button"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:hint="Name" >
+    <ImageView
+        android:id="@+id/main_image"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="75dp"
+        android:src="@drawable/splash" />
 
-        <requestFocus />
-    </EditText>
     <TextView
         android:id="@+id/salutations_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/enter_button"
         android:layout_centerHorizontal="true"
-        android:visibility="gone"
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-    <ImageView
-        android:id="@+id/main_image"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="44dp"
-        android:src="@drawable/splash" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/username_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/name_field"
+        android:layout_below="@+id/black_rect"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:text="Enter a username:"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+    <EditText
+        android:id="@+id/name_field"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/username_label"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Name" />
+
+    <ImageView
+        android:id="@+id/enter_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/name_field"
+        android:layout_toLeftOf="@+id/settings_button"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:src="@drawable/accept_icon" />
+
+    <ImageView
+        android:id="@+id/settings_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/username_label"
+        android:layout_below="@+id/name_field"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="14dp"
+        android:src="@drawable/settings_icon" />
 
 </RelativeLayout>
