--- a/app/res/layout/fragment_welcome.xml
+++ b/app/res/layout/fragment_welcome.xml
@@ -35,6 +35,8 @@
         android:id="@+id/salutations_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/black_rect"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -56,7 +58,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username_label"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Name" />
@@ -65,10 +67,10 @@
         android:id="@+id/enter_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name_field"
+        android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/settings_button"
-        android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/accept_icon" />
 
     <ImageView
@@ -76,9 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/username_label"
-        android:layout_below="@+id/name_field"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="14dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="135dp"
         android:src="@drawable/settings_icon" />
 
 </RelativeLayout>
