Updated recording layout

--- a/app/res/layout/fragment_add_note.xml
+++ b/app/res/layout/fragment_add_note.xml
@@ -181,7 +181,7 @@
     <ImageView
         android:id="@+id/blue_rect"
         android:layout_width="fill_parent"
-        android:layout_height="65dp"
+        android:layout_height="70dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/blue_rectangle" />
@@ -191,16 +191,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/everyone_radio"
         android:layout_marginBottom="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp"
         android:src="@drawable/accept_icon" />
 
     <ImageView
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/accept_button"
-        android:layout_toLeftOf="@+id/time_display"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="100dp"
         android:src="@drawable/reject_icon" />
 
 </RelativeLayout>
