--- a/app/res/layout/fragment_voice_record.xml
+++ b/app/res/layout/fragment_voice_record.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.punventure.punadventure.VoiceRecordActivity$PlaceholderFragment" >
 
     <TextView
@@ -27,29 +23,27 @@
         android:layout_marginTop="70dp"
         android:text="Chronometer" />
 
-    <Button
+    <ImageView
         android:id="@+id/start_recording_button"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/record_time_display"
         android:layout_marginTop="16dp"
         android:layout_toLeftOf="@+id/record_time_display"
-        android:text="Record"
+        android:src="@drawable/mic_icon"
         android:onClick="startRecording" />
 
-    <Button
+    <ImageView
         android:id="@+id/end_recording_button"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/start_recording_button"
         android:layout_toRightOf="@+id/record_time_display"
-        android:text="Done"
+        android:src="@drawable/no_mic_icon"
         android:onClick="stopRecording" />
 
     <TextView
-        android:id="@+id/longitude_label"
+        android:id="@+id/playback_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -69,26 +63,37 @@
         android:id="@+id/start_playback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/longitude_label"
+        android:layout_below="@+id/playback_label"
         android:layout_marginTop="27dp"
         android:layout_toLeftOf="@+id/record_time_display"
         android:src="@drawable/playback_icon" />
 
-    <Button
-        android:id="@+id/add_voice_final"
+    <ImageView
+        android:id="@+id/blue_rect"
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/blue_rectangle" />
+
+    <ImageView
+        android:id="@+id/accept_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/start_playback"
-        android:layout_marginBottom="45dp"
-        android:text="Finished"/>
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp"
+        android:src="@drawable/accept_icon" />
 
-    <Button
-        android:id="@+id/cancel_voice"
+    <ImageView
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/add_voice_final"
-        android:layout_alignLeft="@+id/end_playback"
-        android:text="Cancel"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="100dp"
+        android:src="@drawable/reject_icon" />
 
 </RelativeLayout>
