Updated note details layout

--- a/app/res/drawable/blue_rectangle.xml
+++ b/app/res/drawable/blue_rectangle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#466496"  />
+    <solid android:color="#6EA5F0"  />
 
 </shape>
